# VampireMan

./: .envrc  .gitignore  .gitlab-ci.yml  DEV_README.md  Dockerfile  README.md  cspell.json  demonstration.sh  filter_mpi_warnings.patch  flake.nix  generate-jsonschema.py  pflotran.patch  pyproject.toml  setup.sh  treefmt.toml
.docker/: mpirun-dummy  pflotran-dummy
docs/: TUTORIAL.md  example.yaml
reference_files/: pflotran.h5
settings/: case0_default.yaml  case10_all-features.yaml  case11_large-domain.yaml  case12_read-from-folder.yaml  case1_default.yaml  case1_vary-pressure-const.yaml  case2_vary-hp-positions.yaml  case3_allin1.yaml  case4_extend-plumes.yaml  case5_3d.yaml  case6_vertical_aniso.yaml  case7_read-from-files.yaml  case8_heatpumps-in-detail.yaml  case9_seasonal-changes.yaml  demo.yaml  large.yaml  read-files.yaml  test.yaml
settings/case10_all-features/: hp2.json
settings/case7_inputs/: hp1.json  hydraulic_head.txt  permeability_field.h5
settings/inputs/: permeability_field.h5
tests/reference_files/: east.ex  north.ex  pflotran.h5  south.ex  west.ex
vampireman/: __init__.py  __main__.py  cli.py  data_structures.py  pipeline.py  utils.py
vampireman/loading_stage/: __init__.py  loading_stage.py
vampireman/pflotran/: __init__.py  simulation_stage.py  visualization_stage.py
vampireman/preparation_stage/: __init__.py  preparation_stage.py
vampireman/render_stage/: __init__.py
vampireman/simulation_stage/: __init__.py
vary_my_params/: __main__.py  cli.py  config.py  data_structures.py  pflotran.py  pipeline.py  utils.py
(+61 files in other folders)
