[tool.poetry]
name = "vary-my-params"
version = "0.1.0"
description = ""
authors = ["Max Hausch <github@hausch.xyz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
h5py = "^3.11.0"
jinja2 = "^3.1.4"
matplotlib = "^3.9.1"
ruamel-yaml = "^0.18.6"
noise = "^1.2.2"
scipy = "^1.14.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120
